--- a/tests/test_config.yml
+++ b/tests/test_config.yml
@@ -10,6 +10,9 @@ sensors:
   coolinvert: false
   coolminutes: 10
   verbose: true
+users:
+  - name: foo
+    password: bar
 baseurl: https://foo.bar
 listenaddr: 127.0.0.1:8080
 displayfahrenheit: true
