--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,9 @@ test:
   stage: test
   variables:
     GIN_MODE: debug
+    INFLUXDB_DB: db
+  services:
+  - influxdb
   script:
   - go get -v -t ./...
   - go test -v -coverprofile=$CI_PROJECT_DIR/coverage.out
