Allow configuration of InfluxDB address for tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ test:
   variables:
     GIN_MODE: debug
     INFLUXDB_DB: db
+    INFLUXDB_ADDR: http://influxdb:8086
   services:
   - influxdb
   script:
